Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

* Fri Feb 22 2008 - 0.8.2
- fix to webui to allow repos to be edited there on profile page

* Wed Feb 20 2008 - 0.8.1
- bugfix in reposync code
- don't print tracebacks on SystemExit from optparse
- manpage tweaks

* Fri Feb 15 2008 - 0.8.0 (TBD)
- stable release of 0.7.* branch plus ...
- fixed potential user problem with source_repos in upgrade scenario
- additional higher level API functions for find, fixes for other higher level API functions
- better messaging when insufficient permissions on needed files
- update permissions on reposync fixes

* Thu Jan 31 2008 - 0.7.2 (0.8 rc)
- default_virt_file_size and default_virt_ram added to settings
- enforce permissions/selinux context after reposync
- better API for copying/renames, API consistancy cleanup
- support for renames that resolve dependencies, inclusion in CLI+webapp
- remove leading newline in rendered template files, which apparently breaks AutoYAST?
- recursive syncs automatically sync all subobjects when editing parent objects (default behavior)
- deletes can now be done recursively (optional --recursive on distro/profile remove)
- 'cobbler list' is now (re)sorted

* Wed Jan 09 2008 - 0.7.1
- allow imports to force usage of a specific kickstart template with --kickstart
- added --yumopts parameter to repos (works just like --kopts/--ksmeta)
- minor doc fixes
- fix for name of F8 comps.xml file
- added option --rsync-flags to import command
- added http_port to settings to run Apache on non-80
- rsync during createrepo now keeps filesystem permissions/groups
- ...

* Mon Dec 10 2007 - 0.7.0
- Testing branch
- Fix bug related to <<inherit>> and kickstart args 
- Make CLI functions modular and use optparse
- Quote wget args to avoid creating stray files on target system
- Support Xen FV as virt type (requires F8+)
- Implemented fully pluggable authn/authz system
- WebUI is now mod_python based